--- a/BindingSample/BindingSample.csproj
+++ b/BindingSample/BindingSample.csproj
@@ -15,5 +15,6 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
     <Folder Include="Models\" />
+    <Folder Include="Selectors\" />
   </ItemGroup>
 </Project>
